Added Rspec and first model specs

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,7 +3,7 @@
     <!-- Title Area -->
     <li class="name">
       <h1>
-        <%= link_to 'Romaldo blog', root_path %>
+        <%= link_to 'Blog App', root_path %>
       </h1>
     </li>
     <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
