--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,2 +1,3 @@
 <h2><%= link_to_unless_current post.title, post %></h2>
+<h3> Posted by: <%= post.author_name %></h3>
 <%= post.content.html_safe %>
