Custom error pages

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,6 +13,10 @@
     <ul class="right">
       <li class="divider hide-for-small"></li>
       <li>
+             <%= link_to 'Admin Panel', 'admin/login' %>
+      </li>
+      <li class="divider hide-for-small"></li>
+      <li>
         <%= link_to 'Github', 'https://github.com/reInteractive-open' %>
       </li>
 
